[package]
name        = "petri"
version     = "0.0.4"
description = "Evolutionary computing toolkit"
authors     = ["Will Johnston"]

license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/wbjohnston/petri.git"

[features]
nightly = []

[dependencies]
rand         = "0.3.16"
serde        = "1.0.15"
serde_derive = "1.0.15"
bit-vec      = "0.4.4"
num-traits   = "0.1"
