[package]
name        = "petri"
version     = "0.0.4"
description = "Evolutionary computing toolkit"
authors     = ["Will Johnston"]

license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/wbjohnston/petri.git"

[[bench]]
name = "onemax"
harness = false

[features]
nightly = []
serde_support = ["serde", "serde_derive"]
criterion_support = ["criterion"]

[dependencies]
rand         = "0.3.16"
serde        = {version = "1.0.15", optional = true}
serde_derive = {version = "1.0.15", optional = true}
bit-vec      = "0.4.4"
num-traits   = "0.1"
criterion    = {version = "0.1.1", optional=true}
