[package]
name        = "petri"
version     = "0.0.4"
description = "Evolutionary computing toolkit"
authors     = ["Will Johnston"]

license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/wbjohnston/petri.git"

#[[bench]]
#name = "onemax"
#harness = false

[[bench]]
name = "select"
harness = false

[features]
nightly = []
serde_support = ["serde", "serde_derive"]
criterion_support = ["criterion"]

[dependencies]
rand         = "0.6"
rand_xorshift = { version = "0.1", optional = true}
serde        = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
bit-vec      = "0.5"
num-traits   = "0.2"
criterion    = {version = "0.2", optional=true}
itertools    = "0.8"
